# c0lor-mem

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  electron-builder.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
python/: backend.spec  pyproject.toml  run_server.py
python/app/: main.py  security.py
python/app/api/modules/: test_pattern.py
python/app/core/: color_space.py  config.py  hdr_gainmap.py  logging.py  models.py  pattern_generator.py  pq.py  video_encoder.py
python/app/services/: batch_manager.py  batch_service.py  export_service.py
python/tests/: test_pattern_generator.py
scripts/: build.bat  build.sh
src/main/: index.ts  ipc-handlers.ts  logger.ts  python-bridge.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  env.d.ts  main.tsx
src/renderer/src/api/: WebSocketManager.ts  client.ts  websocket.ts
src/renderer/src/components/: ErrorBoundary.tsx
src/renderer/src/components/Layout/: AppLayout.tsx
src/renderer/src/config/: constants.ts  ui-text.ts
src/renderer/src/modules/test-pattern/: BatchExportPanel.tsx  PatternConfigForm.tsx  PatternPreview.tsx  TestPatternPage.tsx
src/renderer/src/stores/: appStore.ts  testPatternStore.ts
src/renderer/src/styles/: global.css
src/renderer/src/types/: api.ts  format-compat.ts
src/renderer/src/utils/: device-presets.ts  pattern-math.ts
src/shared/: config.ts  electron-api.ts
